gitops/eks-dev/rq-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aegis-status-page-rq
  namespace: aegis-system
  labels:
    app: aegis-status-page-rq
    app.kubernetes.io/name: status-page
    app.kubernetes.io/component: rq-worker
    app.kubernetes.io/part-of: aegis

spec:
  replicas: 2

  selector:
    matchLabels:
      app: aegis-status-page-rq

  template:
    metadata:
      labels:
        app: aegis-status-page-rq
        app.kubernetes.io/name: status-page
        app.kubernetes.io/component: rq-worker
        app.kubernetes.io/part-of: aegis

    spec:
      serviceAccountName: aegis-status-page

      securityContext:
        seccompProfile:
          type: RuntimeDefault
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch

      topologySpreadConstraints:
        - maxSkew: 1
          minDomains: 2
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule

          labelSelector:
            matchLabels:
              app: aegis-status-page-rq

          matchLabelKeys:
            - pod-template-hash

      containers:
        - name: rq-worker
          image: "992382545251.dkr.ecr.us-east-1.amazonaws.com/aegis-eks-dev-status-page@sha256:28c1cca8e0af6b325e47e9dda35e0333a3da5d44a537b2a47a1cdbae7e986df9"
          imagePullPolicy: IfNotPresent

          command:
            - python
            - manage.py
            - rqworker
            - high
            - default
            - low

          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 512Mi

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: runtime-config
              mountPath: /app/statuspage/statuspage/configuration.py
              subPath: configuration.py
              readOnly: true

            - name: tmp
              mountPath: /tmp

      volumes:
        - name: bootstrap
          configMap:
            name: aegis-status-page-bootstrap

        - name: django-secret
          secret:
            secretName: aegis-status-page-secret
            defaultMode: 0400

        - name: runtime-config
          emptyDir:
            medium: Memory
            sizeLimit: 1Mi

        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
